<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"

    tools:context=".MainActivity">

<Spinner
android:id="@+id/style_spinner"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentEnd="true"
android:layout_marginEnd="16dp"
android:layout_marginTop="16dp"/>

<ImageView
android:id="@+id/logo_image"
android:layout_width="150dp"
android:layout_height="150dp"
android:src="@drawable/img"
android:layout_centerHorizontal="true"
android:layout_marginTop="32dp"/>

<EditText
android:id="@+id/edit_text_username"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/usuario"
android:inputType="text"
android:layout_below="@id/logo_image"
android:layout_marginTop="32dp"/>

<EditText
android:id="@+id/edit_text_password"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/contraseña"
android:inputType="textPassword"
android:layout_below="@id/edit_text_username"
android:layout_marginTop="16dp"/>

<Button
android:id="@+id/button_login"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/login"
android:layout_below="@id/edit_text_password"
android:layout_marginTop="32dp"/>

<TextView
android:id="@+id/text_contraseña"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/contraseña_olvidada"
android:layout_below="@id/button_login"
android:layout_marginTop="16dp"
android:layout_alignParentEnd="true"/>

<TextView
android:id="@+id/text_register"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/registro"
android:layout_marginTop="16dp"
android:layout_centerHorizontal="true"/>



    </RelativeLayout>

